# QtNativeUI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  design.md  dev.md
.codebuddy/.rules/: my-rule.mdc
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  quality.yml
.kiro/specs/component-performance-optimization/: requirements.md
.kiro/steering/: agent.md  output.md  product.md  qt.md  structure.md  tech.md
cmake/: QtNativeUIConfig.cmake.in
docs/: QWindowKit-Analysis.md  config.ts  eslint.config.mjs  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/components/: NAutoSuggestBox.md  NCalendarDatePicker.md  NCalendarWidget.md  NCheckBox.md  NContentDialog.md  NDialog.md  NDoubleSpinBox.md  NDropDownButton.md  NFlyout.md  NGroupBox.md  NHyperlinkButton.md  NInfoBar.md  NLabel.md  NLineEdit.md  NMainWindow.md  NMenu.md  NOverlay.md  NPivot.md  NPlainTextEdit.md  NProgressBar.md  NProgressRing.md  NPushButton.md  NRangeSlider.md  NScrollArea.md  NScrollBar.md  NSlider.md  NSpinBox.md  NStackedWidget.md  NTabBar.md  NTabWidget.md  NTextEdit.md  NToggleSwitch.md  NToolTip.md
docs/en/: config.ts  index.md
docs/en/guide/: getting-started.md
docs/guide/: acknowledgments.md  contributing.md  deployment.md  design.md  getting-started.md
docs/tools/: NFluentColors.md
docs/zh/: index.md
docs/zh/components/: NComboBox.md  NListView.md  NNavigationView.md  NRadioButton.md  NToggleButton.md  NToolButton.md  NTreeView.md
docs/zh/guide/: getting-started.md
docs/zh/tools/: NColors.md  NConfig.md  NEnums.md  NIcon.md  NTheme.md
examples/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/components/: animation.cpp  animation.h  button.cpp  button.h  checkbox.cpp  checkbox.h  colors.cpp  colors.h  controls.cpp  controls.h  dialogs.cpp  dialogs.h  icon.cpp  icon.h  lineedit.cpp  lineedit.h  menu.cpp  menu.h  navigation.cpp  navigation.h  toggleswitch.cpp  toggleswitch.h  view.cpp  view.h
examples/widgets/: ExampleSection.cpp  ExampleSection.h
include/QtNativeUI/: NAnimation.h  NAutoSuggestBox.h  NCalendarDatePicker.h  NCalendarWidget.h  NCheckBox.h  NColor.h  NComboBox.h  NConfig.h  NContentDialog.h  NDialog.h  NDoubleSpinBox.h  NDropDownButton.h  NEnums.h  NFluentColors.h  NFlyout.h  NGroupBox.h  NHyperlinkButton.h  NIcon.h  NIconEnums.h  NInfoBar.h  NLabel.h  NLineEdit.h  NListView.h  NMacros.h  NMainWindow.h  NMenu.h  NMenuBar.h  NNavigationBar.h  NNavigationRouter.h  NNavigationView.h  NOverlay.h  NPageComponent.h  NPivot.h  NPlainTextEdit.h  NProgressBar.h  NProgressRing.h  NPushButton.h  NRadioButton.h  NRangeSlider.h  NRouter.h  (+18 more)
resources/: icons.qrc
src/config/: NConfig.cpp  NNavigationRouter.cpp
src/controls/: NAnimation.cpp  NAutoSuggestBox.cpp  NCalendarDatePicker.cpp  NCalendarWidget.cpp  NCheckBox.cpp  NComboBox.cpp  NContentDialog.cpp  NDialog.cpp  NDoubleSpinBox.cpp  NDropDownButton.cpp  NFlyout.cpp  NGroupBox.cpp  NHyperlinkButton.cpp  NIcon.cpp  NInfoBar.cpp  NLabel.cpp  NLineEdit.cpp  NListView.cpp  NMainWindow.cpp  NMenu.cpp  NMenuBar.cpp  NNavigationBar.cpp  NNavigationView.cpp  NOverlay.cpp  NPageComponent.cpp  NPivot.cpp  NPlainTextEdit.cpp  NProgressBar.cpp  NProgressRing.cpp  NPushButton.cpp  NRadioButton.cpp  NRangeSlider.cpp  NScrollArea.cpp  NScrollBar.cpp  NSlider.cpp  NSpinBox.cpp  NStackedWidget.cpp  NSuggestBox.cpp  NTabBar.cpp  NTabWidget.cpp  (+9 more)
src/navigation/: NFooterDelegate.cpp  NFooterDelegate.h  NFooterModel.cpp  NFooterModel.h  NNavigationBarPrivate.cpp  NNavigationBarPrivate.h  NNavigationModel.cpp  NNavigationModel.h  NNavigationNode.cpp  NNavigationNode.h  NNavigationRouter.cpp  NNavigationRouter.h  NNavigationStyle.cpp  NNavigationStyle.h  NNavigationView.cpp  NNavigationView.h  NRouter.cpp
src/private/: nanimation_p.cpp  nanimation_p.h  nautosuggestbox_p.cpp  nautosuggestbox_p.h  nautosuggestmodel.cpp  nautosuggestmodel.h  nbaselistview.cpp  nbaselistview.h  ncalendardatepicker_p.cpp  ncalendardatepicker_p.h  ncalendardelegate.cpp  ncalendardelegate.h  ncalendarheader.cpp  ncalendarheader.h  ncalendarmodel.cpp  ncalendarmodel.h  ncalendartitledelegate.cpp  ncalendartitledelegate.h  ncalendartitlemodel.cpp  ncalendartitlemodel.h  ncalendarwidget_p.cpp  ncalendarwidget_p.h  ncalendarwidgetstyle.cpp  ncalendarwidgetstyle.h  ncheckbox_p.cpp  ncheckbox_p.h  ncombobox_p.cpp  ncombobox_p.h  ncomboboxstyle.cpp  ncomboboxstyle.h  ncontentdialog_p.cpp  ncontentdialog_p.h  ndialog_p.cpp  ndialog_p.h  ndoublespinbox_p.cpp  ndoublespinbox_p.h  ndropdownbutton_p.cpp  ndropdownbutton_p.h  neditstyle.cpp  neditstyle.h  (+105 more)
src/theme/: NColor.cpp  NTheme.cpp  ntheme.cpp
tests/: CMakeLists.txt  tst_ncalendardatepicker.cpp  tst_nlineedit.cpp  tst_npushbutton.cpp  tst_ntoolbutton.cpp
tests/auto/: CMakeLists.txt
tests/auto/ncalendardatepicker/: CMakeLists.txt  tst_ncalendardatepicker.cpp
tests/auto/nlineedit/: CMakeLists.txt  tst_nlineedit.cpp
tests/auto/npushbutton/: CMakeLists.txt  tst_npushbutton.cpp
tests/auto/ntoolbutton/: CMakeLists.txt  tst_ntoolbutton.cpp
tools/: color_generator.js  color_generator.py  custom_colors.json  generate_icon_enums.py
translations/: qtnativeui_en_US.qm  qtnativeui_en_US.ts  qtnativeui_zh_CN.qm  qtnativeui_zh_CN.ts  translations.qrc
